Refinement on buttons and fixed some quirks on iOS

--- a/frontend/css/app_button.css
+++ b/frontend/css/app_button.css
@@ -2,7 +2,7 @@
   border-radius: 0;
   border: 0;
   font-family: Roboto, Helvetica, Arial, sans-serif;
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: lighter;
   margin: 0;
   outline: 0;
@@ -45,17 +45,12 @@
   background-color: #fad58b;
 }
 
-.app_button > .app_button_inner {
-  display: inline-block;
-  text-align: left;
-  width: 110px;
+.app_button > .app_button_hint {
+  height: 0;
+  overflow: hidden;
+  transition: height 0.1s ease-in 0.5s;
 }
 
-.app_button > .app_button_inner > .app_button_icon {
-  display: inline-block;
-  width: 30px;
-}
-
-.app_button > .app_button_inner > .app_button_text {
-  display: inline-block;
+.app_button:active > .app_button_hint {
+  height: 40px;
 }
